--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,16 +9,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@archei/shared": "workspace:*",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "@archei/shared": "workspace:*"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "typescript": "5.6.3",
     "@types/node": "^20.12.12",
+    "@types/react": "19.2.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.12"
+    "tailwindcss": "^3.4.12",
+    "typescript": "5.6.3"
   }
 }
