--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
+# build artefacts
 node_modules/
-.next/
 dist/
-.runs/
-.env*
-pnpm-lock.yaml
+.next/
+
+# env
+.env
+.env.local
+.env.production
+.env.development
+
+# OS
 .DS_Store
 Thumbs.db
-.vercel/
-coverage/
