fix: vercel build with pnpm workspaces

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "rootDirectory": "apps/web",
-  "buildCommand": "pnpm --filter @archei/web build",
+  "buildCommand": "corepack enable && corepack prepare pnpm@10.18.3 --activate && pnpm -w install --frozen-lockfile && pnpm --filter @archei/web build",
   "installCommand": "corepack enable && corepack prepare pnpm@10.18.3 --activate && pnpm -w install --frozen-lockfile",
-  "outputDirectory": ".next"
+  "outputDirectory": "apps/web/.next"
 }
