--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "corepack enable && corepack prepare pnpm@10.18.3 --activate && pnpm -w install --frozen-lockfile && pnpm --filter @archei/web build",
-  "installCommand": "corepack enable && corepack prepare pnpm@10.18.3 --activate && pnpm -w install --frozen-lockfile",
+  "buildCommand": "corepack enable && corepack prepare pnpm@10.18.3 --activate && pnpm -w install --no-frozen-lockfile && pnpm --filter @archei/web build",
+  "installCommand": "corepack enable && corepack prepare pnpm@10.18.3 --activate && pnpm -w install --no-frozen-lockfile",
   "outputDirectory": "apps/web/.next"
 }
