fix(web): add next in apps/web and update lockfile

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "archei-companion-monorepo",
+  "name": "@archei/web",
+  "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@10.18.3",
-  "engines": {
-    "node": ">=20.18.0 <21"
-  },
+  "engines": { "node": ">=20.18.0 <21" },
   "scripts": {
-    "install:all": "pnpm -w install",
-    "dev": "echo \"Usa: pnpm dev:web | pnpm dev:ws\"",
-    "dev:web": "pnpm --filter @archei/web dev",
-    "build:web": "pnpm --filter @archei/web build",
-    "dev:ws": "pnpm --filter @archei/realtime-server dev",
-    "build:ws": "pnpm --filter @archei/realtime-server build",
-    "start:ws": "pnpm --filter @archei/realtime-server start"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
+  "dependencies": {
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "@archei/shared": "workspace:*"
+  },
+  "devDependencies": {
+    "typescript": "5.6.3",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.43",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16"
+  }
 }
